@@ -343,4 +343,19 @@ sub importSystemResolvers
     };
 }
 
+# Method: nameservers
+#
+#  Returns:
+#
+#   Array ref - each element contains a string holding the nameserver
+#
+sub nameservers
+{
+    my ($self) = @_;
+    my $ids = $self->ids();
+    my @nameservers = map { $self->row($_)->valueByName('nameserver') } @{$ids};
+    return \@nameservers;
+}
+
+
 1;
